fix the background image on mobile devices

--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -279,13 +279,14 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    height: 100%;
+    width: 100%;
 }
 
 body {
     font-family: "futura_ltbook", "HelveticaNeueLTStdRegular","HelveticaNeue", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     color: #fff;
     text-align: center;
-
 }
 
 section {
